--- a/main.css
+++ b/main.css
@@ -1,32 +1,43 @@
+/* Pseudo-classes */
+
+button:hover {
+  background-color: #f6980c;
+  box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+}
+
+/* General styles */
+
 body {
     font-family: 'Raleway', sans-serif;
     color: #213053;
-    margin: 0;
-  }
+    margin: 0 auto;
+}
+
+/* Header */
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-  }
+}
 
-  .header__logo {
+.header__logo {
     height: 30px;
-  }
+}
 
-  a {
+a {
     text-decoration: none;
     color: #213053;
-  }
+}
 
-  header a {
+header a {
     font-size: 15px;
     font-weight: 600;
     margin-right: 25px;
-  }
+}
 
-  button {
+button {
     font-family: 'Raleway', sans—serif;
     font-size: 15px;
     color: #fff;
@@ -36,18 +47,21 @@ header {
     cursor: pointer;
     box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
     padding: 15px;
-  }
+    transition: background-color, box-shadow 0.3s ease-in;
+}
 
-  .about__image {
+.about__image {
+    display: flex;
     width: 500px;
-  }
+    flex-direction: column;
+}
    
-  .about__sun-image {
+.about__sun-image {
     width: 100px;
     height: 100px;
-  }
+}
 
-  .about {
+.about {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -56,33 +70,148 @@ header {
     background: url('img/back.png') no-repeat;
     background-position: center;
     background-size: cover;
-  }
+}
 
-  .about h1 {
+.about h1 {
     font-size: 70px;
     line-height: 76px;
-  }
+}
 
-  .about p {
+.about p {
     font-size: 18px;
     line-height: 30px;
     opacity: 0.8;
-  }
+}
 
-  .about button {
+.about button {
     font-size: 18px;
     border-radius: 20px;
     padding: 20px 25px;
     margin-top: 20px;
-  }
+}
 
-  .about__info {
+.about__info {
     max-width: 550px;
-  }
+}
 
-  .box {
+.box {
     padding: 5px;
     margin: 50px;
     background-color: green;
     background: green;
-  }
+}
+
+/* Form */
+
+.form__container {
+  width: 550px;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  background-color: #1d263a;
+  color: #fff;
+  padding-top: 115px;
+  padding-bottom: 115px;
+  text-align: center;
+}
+
+.form h1 {
+  font-size: 48px;
+}
+
+.form p {
+  font-size: 18px;
+  opacity: 0.65;
+}
+
+.form__group {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.form label {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.form input {
+  font-size: 18px;
+  color: #213053;
+  height: 60px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 15px;
+  border: none;
+  margin-bottom: 15px;
+}
+
+.form select {
+  font-size: 18px;
+  color: #213053;
+  height: 60px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 15px;
+  border: none;
+  margin-bottom: 15px;
+}
+
+.form__submit {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 40px;
+}
+
+select {
+  appearance: none;
+}
+
+input {
+  outline: none;
+}
+
+/* Footer */
+
+footer {
+  padding: 90px 20px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.footer__container {
+  display: flex;
+  justify-content: center;
+}
+
+.footer__copyright {
+  margin-top: 40px;
+  text-align: center;
+  opacity: 0.5;
+}
+
+.footer__group {
+  margin-right: 80px;
+}
+
+.footer__group h3 {
+  font-size: 16px;
+  opacity: 0.7;
+  margin-bottom: 30px;
+}
+
+.footer__links {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__links a {
+  margin-bottom: 15px;
+}
